Added the properties of matrix Q and R to slides.
 Slide 6, the bottom part - "where Q=QˆT ≥ 0 and R = RˆT >0".

--- a/Optimal_Control_of_LTI_systems/main.tex
+++ b/Optimal_Control_of_LTI_systems/main.tex
@@ -135,7 +135,7 @@ Then HJB becomes:
 (\mathbf A  \mathbf x + \mathbf B \mathbf u)] = 0
 \]
 %
-where $\mathbf Q = \mathbf Q^\top$ and $\mathbf R = \mathbf R^\top$.
+where $\mathbf Q = \mathbf Q^\top \geq 0 $ and $\mathbf R = \mathbf R^\top > 0$.
 
 \end{flushleft}
 \end{frame}
@@ -171,6 +171,7 @@ Then HJB becomes:
 \begin{frame}{Algebraic Riccati}
 \framesubtitle{LQR}
 \begin{flushleft}
+
 
 Finding partial derivative of the HJB with respect to $\mathbf u$ and setting it to zero (as it is an extreme point) we get:
 \[
