--- a/Notes/PD and 1st order LTI/main.tex
+++ b/Notes/PD and 1st order LTI/main.tex
@@ -67,7 +67,7 @@ Alternatively, pick $u =  K_p x + B^{-1} \dot x  - c$. Then we obtain:
 \]
 
 
-Here it means that any $x$ in column space of $\text{col}(A + B K_p)^+ B$ can be achieved instantaneously, which is not physical or meaningful.
+Here it means that any $x$ in column space of $(A + B K_p)^+ B$ can be achieved instantaneously, which is not physical or meaningful.
 
 \end{flushleft}
 
