--- a/lecture_slides/Optimal_Control_of_LTI_systems/main.tex
+++ b/lecture_slides/Optimal_Control_of_LTI_systems/main.tex
@@ -153,7 +153,7 @@ There is a theorem that says that for LTI with quadratic cost, $J^*$ has the for
 J^* = \mathbf  x^\top \mathbf S \mathbf x
 \]
 %
-where $\mathbf S = \mathbf S^\top$.
+where $\mathbf S = \mathbf S^\top \geq 0$.
 
 \bigskip
 
