--- a/lecture_slides/Optimal_Control_of_LTI_systems/main.tex
+++ b/lecture_slides/Optimal_Control_of_LTI_systems/main.tex
@@ -157,6 +157,11 @@ where $\mathbf S = \mathbf S^\top$.
 
 \bigskip
 
+Taking a partial derivative on $x$ of $J^*$ (the gradient):
+\[
+\frac{\partial J^*}{\partial \mathbf x}  = 2\mathbf x^\top \mathbf S
+\]
+
 Then HJB becomes:
 \[
 \underset{\mathbf u}{\min} \ [ 
