fix: word style

--- a/lecture_slides/Optimal_Control_of_LTI_systems/main.tex
+++ b/lecture_slides/Optimal_Control_of_LTI_systems/main.tex
@@ -157,7 +157,7 @@ where $\mathbf S = \mathbf S^\top$.
 
 \bigskip
 
-Taking a partial derivative on $x$ of $J^*$ (the gradient):
+Taking a partial derivative of $J^*$ with respect to $x$ (the gradient):
 \[
 \frac{\partial J^*}{\partial \mathbf x}  = 2\mathbf x^\top \mathbf S
 \]
