--- a/lecture_slides/Noise_Information_Observation/main.tex
+++ b/lecture_slides/Noise_Information_Observation/main.tex
@@ -148,7 +148,7 @@ with measurements $\Tilde{\mathbf y}$. We want to get a good estimate of the sta
 
 \bigskip
 
-First note: dynamics should also hold for out observation:
+First note: dynamics should also hold for our observation:
 \[
 \hat{\dot {\mathbf x}} = \mathbf A \hat{\mathbf x} 
 \]
