--- a/lecture_slides/Noise_Information_Observation/main.tex
+++ b/lecture_slides/Noise_Information_Observation/main.tex
@@ -153,7 +153,7 @@ First note: dynamics should also hold for our observation:
 \hat{\dot {\mathbf x}} = \mathbf A \hat{\mathbf x} 
 \]
 %
-Therefore if we know the initial conditions of our system exactly, and we know out model exactly, we can find exact state of the system without using measurement $\Tilde{\mathbf y}$. This we can call \emph{open loop observation}
+Therefore if we know the initial conditions of our system exactly, and we know our model exactly, we can find exact state of the system without using measurement $\Tilde{\mathbf y}$. This we can call \emph{open loop observation}
 
 Unfortunately, we never know neither model nor initial conditions exactly.
 
