--- a/lecture_slides/Noise_Information_Observation/main.tex
+++ b/lecture_slides/Noise_Information_Observation/main.tex
@@ -240,7 +240,7 @@ We just derived the analytic solution for the \emph{least squares problem}, whic
 \mathbf C^+ =  (\mathbf C^\top \mathbf C)^{-1} \mathbf C^\top
 \]
 
-It represent best possible solution, given a single observation round. However, it does not use the dynamics and can change rapidly.
+It represents best possible solution, given a single observation round. However, it does not use the dynamics and can change rapidly.
 
 
 \end{flushleft}
