--- a/lecture_slides/Observer_Design_Kalman_Filter/main.tex
+++ b/lecture_slides/Observer_Design_Kalman_Filter/main.tex
@@ -70,7 +70,7 @@ Assume the measurement is perfect: $\hat{\mathbf y} = \mathbf y$. Then we can pr
 \framesubtitle{Estimation error dynamics}
 \begin{flushleft}
 
-Remember that state estimation error is $\epsilon = \mathbf x -  \hat{\mathbf x}$ and the actual dynamics of the system is:
+Remember that state estimation error is $\epsilon = \hat{\mathbf x} - \mathbf x$ and the actual dynamics of the system is:
 %
 \[
 \begin{cases}
