--- a/lecture_slides/Noise_Information_Observation/main.tex
+++ b/lecture_slides/Noise_Information_Observation/main.tex
@@ -144,7 +144,7 @@ Let us consider dynamical system
 \end{cases}
 \]
 %
-with measurements $\Tilde{\mathbf y}$. We want to get a good estimate of the state $\hat{\mathbf x}$ as we can.
+with measurements $\Tilde{\mathbf y}$. We want to get as good estimate of the state $\hat{\mathbf x}$ as we can.
 
 \bigskip
 
@@ -169,7 +169,7 @@ Unfortunately, we never know neither model nor initial conditions exactly.
 Let us introduce state estimation error $\epsilon = \mathbf x -  \hat{\mathbf x}$. Since $\dot {\mathbf x} = \mathbf A \mathbf x$ and $\hat{\dot {\mathbf x}} = \mathbf A \hat{\mathbf x}$, We can rewrite the previously considered dynamics as follows:
 
 \[
-\dot {\mathbf x} - \hat{\dot {\mathbf x}} = \mathbf A \hat{\mathbf x} - \mathbf A \hat{\mathbf x}
+\dot {\mathbf x} - \hat{\dot {\mathbf x}} = \mathbf A \mathbf x - \mathbf A \hat{\mathbf x}
 \]
 therefore:
 \[
