--- a/lecture_slides/Optimal_Control_of_LTI_systems/main.tex
+++ b/lecture_slides/Optimal_Control_of_LTI_systems/main.tex
@@ -34,7 +34,7 @@
 \framesubtitle{Cost and optimal cost}
 \begin{flushleft}
 
-Let as define dynamics:
+Let us define dynamics:
 
 \[
 \dot {\mathbf x} = \mathbf f (\mathbf x, \mathbf u)
