Add note about noise mean to the lecture

--- a/lecture_slides/Observer_Design_Kalman_Filter/main.tex
+++ b/lecture_slides/Observer_Design_Kalman_Filter/main.tex
@@ -228,7 +228,7 @@ Assume we have a discrete linear system with disturbance and noise:
 \end{cases}
 \]
 
-where $\mathbf w$ and $\mathbf v$ are disturbance and noise, both are random processes. Covariance matrix of $\mathbf w$ is $\mathbf W$, covariance matrix of $\mathbf v$ is $\mathbf V$.
+where $\mathbf w$ and $\mathbf v$ are disturbance and noise, both are random processes and both assumed to have 0 expected value. Covariance matrix of $\mathbf w$ is $\mathbf W$, covariance matrix of $\mathbf v$ is $\mathbf V$.
 
 \bigskip
 
