--- a/lecture_slides/Discrete_Systems/main.tex
+++ b/lecture_slides/Discrete_Systems/main.tex
@@ -117,7 +117,7 @@ Isolating $\mathbf x[i + 1]$ on the left hand side, we get:
 \framesubtitle{Discrete LTI, part 1}
 \begin{flushleft}
 
-If we have dynamics in the form:
+If we have a non-autonomous dynamics in the form:
 \[
 \dot {\mathbf x} = \mathbf A \mathbf x + \mathbf B \mathbf u
 \]
