--- a/lecture_slides/Noise_Information_Observation/main.tex
+++ b/lecture_slides/Noise_Information_Observation/main.tex
@@ -102,7 +102,7 @@ Then:
 \item $\hat{\mathbf y}$ is the estimated (observed) output
 \end{itemize}
 
-Notice that we never know true state $\mathbf x$, and therefor for the control purposes we have to use the estimated state $\hat{\mathbf x}$.
+Notice that we never know true state $\mathbf x$, and therefore for the control purposes we have to use the estimated state $\hat{\mathbf x}$.
 
 \end{flushleft}
 \end{frame}
